--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   	<meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, target-densityDpi=device-dpi, minimal-ui' />
-    <title>Khaleeqa Aasiyah Garrett</title>
+    <title>Khaleeqa Aasiyah Garrett1</title>
   </head>
   <body class="light-theme">
     <div class="experience">
