--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
           <div class="section-intro-wrapper">
             <h1 class="section-title">
-              <span class="section-title-text">About</span>
+              <span class="section-title-text">A bit about me</span>
               <div class="section-title-decoration styleOne"></div>
               <div class="section-title-decoration styleTwo"></div>
               <div class="section-title-decoration styleThree"></div>
@@ -90,6 +90,7 @@
 
           <div class="section-detail-wrapper" id="about-me">
             <h3 class="section-heading"></h3>
+            <div id="cv-link-container"></div>
           </div>
         </section>
 
