--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="hero">
           <div class="hero-wrapper">
             <!-- Intro Stuff -->
-            <div class="intro-text">Explore My Professional Journey!</div>
+            <div class="intro-text">Welcome to my virtual home!</div>
             <div class="arrow-svg-wrapper">
               <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
                 <path
@@ -68,7 +68,7 @@
 
             <div class="hero-second">
               <p class="hero-second-subheading first-sub"></p>
-              <p class="hero-second-subheading second-sub">Portfolio</p>
+              <p class="hero-second-subheading second-sub"></p>
             </div>
           </div>
         </section>
@@ -92,7 +92,6 @@
 
           <div class="section-detail-wrapper" id="about-me">
             <h3 class="section-heading"></h3>
-            <div id="cv-link-container"></div>
           </div>
         </section>
 
